arreglando index.css

--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -2,7 +2,8 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 body{
-  margin: 0px;
   display: flex;
-
+  margin-right: auto;
+  margin-left: auto;
+  
 }
