--- a/my-react-app/src/components/UserLogged/UserLogged.css
+++ b/my-react-app/src/components/UserLogged/UserLogged.css
@@ -1,3 +1,21 @@
 #UserLoggedsection{
     display: flex;
 }
+
+#UserNavMenu{
+    background-color: #f1f1f1;
+    margin: 20px;
+    width: 15%;
+    text-align: left;
+    padding-left: 20px;
+}
+
+#UserNavMenu ul{
+    list-style-type: none;
+    padding-left: 15px;
+}
+
+#UserNavMenu a{
+    color: black;
+    text-decoration: none;
+}
