Checkout page complete

--- a/my-react-app/src/components/Checkout/checkout.css
+++ b/my-react-app/src/components/Checkout/checkout.css
@@ -16,6 +16,7 @@
   border: 1px solid black;
   background-color: white;
   padding: 10px;
+  padding-right: 30%;
 }
 
 .main-title {
@@ -89,4 +90,20 @@
 .order a {
   text-decoration: none;
   color: white;
+}
+.qrIMG {
+  max-width: 300px;
+  height: auto;
+}
+
+.form-container-checkout input {
+  width: 60%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.form-container-checkout .smallInput {
+  width: 29%;
 }
