--- a/my-react-app/src/components/ShoppingCart/SavedforLater.css
+++ b/my-react-app/src/components/ShoppingCart/SavedforLater.css
@@ -64,3 +64,13 @@
 .product-subtotal span {
   display: block;
 }
+
+.button-as-text {
+  background: none;
+  border: none;
+  color: #888;
+  text-decoration: none; /* Opcional, para darle un estilo de enlace */
+  cursor: pointer; /* Para que se vea como un enlace al pasar el mouse */
+  padding: 5px;
+  font: inherit; /* Hereda la fuente del contenedor padre */
+}
