Correcciones para interaccion

--- a/my-react-app/src/components/ListOrdenes/ListOrdenes.css
+++ b/my-react-app/src/components/ListOrdenes/ListOrdenes.css
@@ -15,7 +15,10 @@
     padding: 10px 0;
     border-bottom: 1px solid #ccc;
   }
-  
+  .order-item {
+    width: 100%;
+  }
+
   .order-header {
     font-weight: bold;
     background-color: #eee;
