--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -40,10 +40,16 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   width: 100%;
 }
-body {
-  margin-left: 0%;
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+.container {
   display: flex;
-  width: max-content;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 
